# event-watcher-rs

./: Cargo.toml
src/: main.rs
